--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     tools:context=".MainActivity">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/contact_list_view"
+        android:id="@+id/contact_recycle_view"
         android:layout_width="409dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toTopOf="@+id/add_contact_nav"
